--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,5 +30,5 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           branch: gh-pages
-          folder: dist/first-app/browser/  
+          folder: dist/to-do-list  
           token: ${{ secrets.GITHUB_TOKEN }}
