--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,5 +34,5 @@ jobs:
         with:
           folder: dist/to-do-list  
           token: ${{ secrets.GITHUB_TOKEN }}
+          branch: master
           clean: true
-          force: true
