--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,9 +30,9 @@ jobs:
         run: git worktree prune
         
       - name: Deploy to GitHub Pages
-        uses: JamesIves/github-pages-deploy-action@v4
+        uses: JamesIves/github-pages-deploy-action@v3
         with:
           folder: dist/to-do-list  
           token: ${{ secrets.GITHUB_TOKEN }}
-          branch: master
+          branch: gh-pages
           clean: true
