--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          folder: dist/to-do-list  
+          folder: docs/browser/  
           token: ${{ secrets.GITHUB_TOKEN }}
           branch: gh-pages
           clean: true
